--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -358,7 +358,7 @@ by default, and you can still access it internally with C<$!x>.
 
 =head2 How and why do C<say>, C<put> and C<print> differ?
 
-The most obvious difference is that C<say> and C<put> appends
+The most obvious difference is that C<say> and C<put> append
 a newline at the end of the output, and C<print> does not.
 
 But there is another difference: C<print> and C<put> converts its
