--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -111,6 +111,11 @@ to the standard error stream.
 This is in spirit similar to Perl 5's L<Data::Dumper
 module|http://perldoc.perl.org/Data/Dumper.html>.
 
+Please note that C<dd> will ignore named parameters. You can use a capture to
+force it to dump everything passed to it.
+
+    dd \((:a(1), :b(2)), :c(3));
+
 =head2 sub prompt
 
     sub prompt($msg)
