minimal fix of minimal typo

--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -273,7 +273,7 @@ maps over a list of three elements, not of one.
 To provide custom containers Perl 6 provides the class C<Proxy>. It takes two
 methods that are called when values are stored or fetched from the container.
 Type checks are not done by the container itself and other restrictions like
-readonlyness can be broken. The returned value must therefor be of the same
+readonlyness can be broken. The returned value must therefore be of the same
 type then the type of the variable it is bound to. We can use type captures to
 work with types in Perl 6.
 
