Clarify int64 type and add something about using int and num type

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -63,7 +63,7 @@ likely grow with time).
     int8           (char in C)
     int16          (short in C)
     int32          (int in C)
-    int64          (64-bit int in C)
+    int64          (64-bit explicited int in C like int64_t in C99)
     long           (32- or 64-bit, depends what long means locally)
     longlong       (at least 64bits, what long long means locally)
     num32          (float in C)
@@ -73,6 +73,9 @@ likely grow with time).
     Pointer[void]  (void* in C, can point to all other types)
     bool           (bool from C99)
     size_t         (size_t in C)
+
+Don't use Perl 6 native type like C<int> or C<num> they could lead you to
+unwanting boundary issue between 32 bits and 64 bits system.
 
 Note that the lack of a C<returns> trait is used to indicate void return type.
 Do I<not> use the 'void' type anywhere except in the Pointer parameterization.
