--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -63,7 +63,7 @@ likely grow with time).
     int8           (char in C)
     int16          (short in C)
     int32          (int in C)
-    int64          (64-bit explicited int in C like int64_t in C99)
+    int64          (64-bit explicit int in C like int64_t in C99)
     long           (32- or 64-bit, depends what long means locally)
     longlong       (at least 64bits, what long long means locally)
     num32          (float in C)
