--- a/Language/control.pod
+++ b/Language/control.pod
@@ -343,7 +343,7 @@ for @cars <-> $_ {...}
 
 =end code
 
-A for loop can produce a a C<List> of the values produced by each run of the
+A for loop can produce a C<List> of the values produced by each run of the
 attached block.  To capture these values, put the for loop in parenthesis or
 assign them to an array:
 
