--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -13,7 +13,7 @@ there have been other implementations in the past and should be others in the
 future. Perl 6 is the definition of the language. Many times the two names will
 be used loosely and interchangeably.
 
-=head2 Is there going to be a Perl 6 versions 6.0.0?
+=head2 Is there going to be a Perl 6 version 6.0.0?
 
 "Perl 6" is a language, not an implementation of that language.  Think of
 "Perl 6" as being like "C", "C++", "Javascript", etc., where the language is
