--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -457,10 +457,11 @@ the exception with the C<exception> method.
 
 =head2 Why is C<wantarray> or C<want> gone? Can I return different things in different contexts?
 
-Perl 5 has the C<wantarray> function that tells you whether it is called in
-void, scalar or list context. Perl 6 has no equivalent construct,
-because context does not flow inwards, i.e. a routine would need time travel to know which
-context it is called in because context is lazy, known only when the results are used later.
+Perl 5 has the L<C<wantarray>|/language/5to6-perlfunc#wantarray> function that
+tells you whether it is called in void, scalar or list context. Perl 6 has no
+equivalent construct, because context does not flow inwards, i.e. a routine would need
+time travel to know which context it is called in because context is lazy, known
+only when the results are used later.
 
 For example, Perl 6 has multiple dispatch, so in a code example like
 
@@ -473,8 +474,12 @@ an integer, because it is not yet known what the caller is. In general
 this requires solving the halting problem, which even Perl 6 compiler
 writers have trouble with.
 
-The way to achieve context sensitivity in Perl 6 is to return an object
+One way to achieve context sensitivity in Perl 6 is to return an object
 that knows how to respond to method calls that are typical for a context.
+In Perl 6 this is actually a L<lot easier|/language/5to6-perlfunc#wantarray>
+than it may sound, and other features of the language either mitigate the
+need to do so in the first place, or make it possible to cover most of the
+use cases of wantarray.
 
 For example regex matches return L<Match objects that know how to respond
 to list indexing, hash indexing, and that can turn into the matched
