Document Date's :formatter named parameter
Just like DateTime's, now that it lives in the Dateish role.

--- a/Type/Date.pod
+++ b/Type/Date.pod
@@ -35,7 +35,7 @@ an object the current day according to the system clock.
 Defined as:
 
     proto method new() {*}
-    multi method new($year, $month, $day)             returns Date:D
+    multi method new($year, $month, $day,:&formatter) returns Date:D
     multi method new(:$year!, :$month = 1, :$day = 1) returns Date:D
     multi method new(Str $date)                       returns Date:D
     multi method new(Instant:D $dt)                   returns Date:D
@@ -43,28 +43,29 @@ Defined as:
 
 Usage:
 
-    $date = Date.new(YEAR, MONTH, DAY)
-    $date = Date.new(year => YEAR, month => MONTH?, day => DAY?)
-    $date = Date.new(YYYY-MM-DD)
-    $date = Date.new(now)
-    $date = Date.new(DateTime.now)
+    $date = Date.new(YEAR, MONTH, DAY, FORMATTER?)
+    $date = Date.new(year => YEAR, month => MONTH?, day => DAY?,FORMATTER?)
+    $date = Date.new(YYYY-MM-DD,FORMATTER?)
+    $date = Date.new(now,FORMATTER?)
+    $date = Date.new(DateTime.now,FORMATTER?)
 
 Creates a new C<Date> object, either from a triple of (year, month, day)
 that can be coerced to integers, or from a string of the form C<YYYY-MM-DD>
 (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>), or from an Instant
-or DateTime object.
+or DateTime object.  Optionally accepts a formatter as a named parameter.
 
 =head2 method today
 
 Defined as:
 
-    method today() returns Date:D
+    method today(:&formatter) returns Date:D
 
 Usage:
 
     Date.today
 
-Returns a C<Date> object for the current day.
+Returns a C<Date> object for the current day.  Optionally accepts a
+formatter named parameter.
 
 =head2 method later
 
