--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -235,24 +235,6 @@ Returns the time zone in hours as an offset from UTC.
 
     say DateTime.new('2015-12-24T12:23:00+0200').offset-in-hours;   # 2
 
-=head2 method formatter
-
-Defined as:
-
-    method formatter(DateTime:D:)
-
-Usage:
-
-    DATETIME.formatter
-
-Returns the formatting function which is used for conversion to
-L<Str|/type/Str>. If none was provided at object construction, a
-default formatter is used which produces an ISO 8601 timestamp.  In that
-case the method will return a Callable type object.
-
-The formatting function is called by L<#method Str> with the invocant as its
-only argument.
-
 =head2 method Str
 
 Defined as:
@@ -264,7 +246,8 @@ Usage:
     DATETIME.Str
 
 Returns a string representation of the invocant, as done by
-L<the formatter|#method formatter>.
+L<the formatter|#method formatter>.  If no formatter was specified, an
+ISO 8601 timestamp will be returned.
 
 =head2 method Instant
 
