--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -48,6 +48,23 @@ Usage:
 
 Returns the day of the month of the date (1..31)
 
+=head2 method formatter
+
+Defined as:
+
+    method formatter(DateTime:D:)
+
+Usage:
+
+    Dateish.formatter
+
+Returns the formatting function which is used for conversion to
+L<Str|/type/Str>. If none was provided at object construction, a
+default formatter is used.  In that case the method will return a
+Callable type object.
+
+The formatting function is called by L<#method Str> with the invocant as its
+only argument.
 
 =head2 method is-leap-year
 
