More massaging to unbreak links.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -40,7 +40,7 @@ executed.
 Unless it stands alone as a statement, a block simply creates a closure.  The
 statements inside are not executed immediately.  Closures are another topic
 and how they are used is explained
-L<elsewhere|/language/functions#Blocks and Lambdas>.  For now it is just
+L<elsewhere|/language/functions#Blocks_and_Lambdas>.  For now it is just
 important to understand when blocks run and when they do not:
 
     say "We get here"; { say "then here." }; { say "not here"; 0; } or die;
@@ -240,7 +240,7 @@ present:
 When you get sick of typing "if not (X)" you may use C<unless> to invert
 the sense of a conditional statement.  You cannot use C<else> or C<elsif>
 with C<unless> because that ends up getting confusing.  Other than those
-two differences C<unless> works the same as L<if>:
+two differences C<unless> works the same as L<#if>:
 
     unless 1 { "1 is false".say }  ; # does not say anything, since 1 is true
     unless 1   "1 is false".say    ; # syntax error, missing block
@@ -302,7 +302,7 @@ for @foo { 42.print } # prints 42 as many times as @foo has elements
 
 =end code
 
-Pointy block syntax or a L<placeholder|/language/variables#The C<^> Twigil>
+Pointy block syntax or a L<placeholder|/language/variables#The_^_Twigil>
 may be used to name the parameter, of course.
 
 =begin code
