Correct URL (previously 404)

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -418,7 +418,7 @@ To share your module, do the following:
 
     =item After the pull request has been accepted, wait for an hour. If
     your module doesn't show up on L<https://modules.perl6.org/>, please
-    view the log file at L<https://modules.perl6.org/log/update.log> to see
+    view the log file at L<https://modules.perl6.org/update.log> to see
     if it identifies an error with your module or meta file.
 
 B<That's it! Thanks for contributing to the Perl 6 community!>
