Minor wording changes

--- a/Language/rb-nutshell.pod
+++ b/Language/rb-nutshell.pod
@@ -1,13 +1,13 @@
 =begin pod
 
-=TITLE Ruby To Perl6 - Nutshell
+=TITLE Perl6 from Ruby - Nutshell
 
-=SUBTITLE Ruby to Perl 6, in a nutshell: How do I do what I used to do?
+=SUBTITLE Learning Perl 6 from Ruby, in a nutshell: What do I already know?
 
 This page attempts to index the high-level differences in syntax and semantics
 between Ruby and Perl 6. Whatever works in Ruby and must be written differently
-in Perl 6 should be listed here (whereas many I<new> Perl 6 features and idioms
-won't be).
+in Perl 6 should be listed here (whereas many Perl 6 features and idioms won't
+be).
 
 Hence this should not be mistaken for a beginner tutorial or overview of Perl
 6; it is intended as a technical reference for Perl 6 learners with a strong
