--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -121,7 +121,7 @@ Sigilless variables do not enforce context, so they can be used to pass
 something on as-is:
 
     sub logged(&f, |args) {
-        say('Calling ' ~ &f.name ~ ' with arguments ' ~ args.perL)
+        say('Calling ' ~ &f.name ~ ' with arguments ' ~ args.perl)
         my \result = f(|args);
         #  ^^^^^^^ not enforcing any context here
         say(&f.name ~ ' returned ' ~ result.perl)
