improve example of placeholder variables
This better represents the intended usage, such as { $^b cmp $^a }, and
cautions the reader against names that require mental sorting in order
to properly write or understand the code.

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -301,7 +301,7 @@ that block. So the block in the code
 
     =for code :allow<B>
     for ^4 {
-        say "B<$^second> follows B<$^first>";
+        say "B<$^b> follows B<$^a>";
     }
 
 which prints
@@ -309,12 +309,15 @@ which prints
     1 follows 0
     3 follows 2
 
-has two formal parameters, namely C<$first> and C<$second>. Note that even
-though C<$^second> appears before C<$^first> in the code, C<$^first> is
-still the first formal parameter to that block. This is because the
-placeholder variables are sorted in Unicode order. If you have self-declared
-a parameter using C<$^a> once, you may refer to it using only C<$a>
-thereafter.
+has two formal parameters, namely C<$a> and C<$b>. Note that even though C<$^b>
+appears before C<$^a> in the code, C<$^a> is still the first formal parameter
+to that block. This is because the placeholder variables are sorted in Unicode
+order. If you have self-declared a parameter using C<$^a> once, you may refer
+to it using only C<$a> thereafter.
+
+Although it is possible to use nearly any valid identifier as a placeholder
+variable, it's recommended to use short names or ones that can be trivially
+understood in the correct order, to avoid surprise on behalf of the reader.
 
 Subroutines may also make use of placeholder variables but only if they do
 not have an explicit parameter list. This is true for normal blocks too.
