Document sub form of "flat"

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -217,6 +217,18 @@ passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total
 of two iterations and the result sequence C<"1,2", "a,b">.
 See L<method flatmap|/type/List/#method_flatmap> for an alternative that flattens.
 
+=head2 sub flat
+
+Defined as:
+
+    sub flat (**@list is raw)
+
+Constructs a list which contains any arguments provided in the order
+provided, and returns the result of calling the C<.flat> method (L<inherited
+from C<Any>|/type/Any#method_flat>) on that list:
+
+    flat 1, (2, (3, 4), $(5, 6)));  # (1, 2, 3, 4, $(5, 6)).Seq
+
 =head2 method flatmap
 
 Defined as:
