Add example of formatter, Floyd-ATC++

--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -32,6 +32,9 @@ say $dt;                            # 2015-11-21T16:01:00Z
 say $dt.later(days => 20);          # 2015-12-11T16:01:00Z
 say $dt.truncated-to('hour');       # 2015-11-21T16:00:00Z
 say $dt.in-timezone(-8 * 3600);     # 2015-11-21T08:01:00-0800
+
+my $now = DateTime.now(formatter => { .hour ~ ":" ~ .minute });
+say $now;                           # 12:45 (or something like that)
 =end code
 
 =head1 Methods
@@ -92,10 +95,11 @@ Defined as:
 
 Usage:
 
-    DateTime.now
+    DateTime.now(TIMEZONE?, FORMATTER?)
 
 Creates a new C<DateTime> object from the current system time, optionally with
 a different timezone than the default attached.
+
 
 =head2 method clone
 
