Better example using sprintf

--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -33,7 +33,7 @@ say $dt.later(days => 20);          # 2015-12-11T16:01:00Z
 say $dt.truncated-to('hour');       # 2015-11-21T16:00:00Z
 say $dt.in-timezone(-8 * 3600);     # 2015-11-21T08:01:00-0800
 
-my $now = DateTime.now(formatter => { .hour ~ ":" ~ .minute });
+my $now = DateTime.now(formatter => { sprintf "%02d:%02d",.hour,.minute });
 say $now;                           # 12:45 (or something like that)
 =end code
 
