Remove the Enum type
... because it was removed from Rakudo in 2015.09

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -654,8 +654,8 @@ Coerces the argument to L<Str> by calling the C<Str> method on it.
 
 =head2 prefix C«|»
 
-Flattens objects of type L<Capture>, L<Enum>, L<Pair>, L<List>
-L<Map> and L<Hash> into an argument list.
+Flattens objects of type L<Capture>, L<Pair>, L<List> L<Map> and L<Hash>
+into an argument list.
 
 Outside of argument lists, it returns a L<Slip|/type/Slip>, which makes it
 flatten into the outer list.
@@ -939,7 +939,6 @@ to act like a role, for example enum values.
     multi sub infix:<cmp>(Any,       Any)
     multi sub infix:<cmp>(Real:D,    Real:D)
     multi sub infix:<cmp>(Str:D,     Str:D)
-    multi sub infix:<cmp>(Enum:D,    Enum:D)
     multi sub infix:<cmp>(Version:D, Version:D)
 
 Generic, "smart" three-way comparator.
@@ -1140,7 +1139,6 @@ Mnemonic: I<less or equal>
     multi sub infix:<before>(Any,       Any)
     multi sub infix:<before>(Real:D,    Real:D)
     multi sub infix:<before>(Str:D,     Str:D)
-    multi sub infix:<before>(Enum:D,    Enum:D)
     multi sub infix:<before>(Version:D, Version:D)
 
 Generic ordering, uses the same semantics as L<cmp|#infix cmp>.
@@ -1152,7 +1150,6 @@ Returns C<True> if the first argument is smaller than the second.
     multi sub infix:<after>(Any,       Any)
     multi sub infix:<after>(Real:D,    Real:D)
     multi sub infix:<after>(Str:D,     Str:D)
-    multi sub infix:<after>(Enum:D,    Enum:D)
     multi sub infix:<after>(Version:D, Version:D)
 
 Generic ordering, uses the same semantics as L<cmp|#infix cmp>.
