--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -28,11 +28,11 @@ You can add new pairs simply by assigning to an unused key:
 =head1 Hash assignment
 
 Assigning a list of elements to a hash variable first empties the variable,
-and then iterates the elements of the right-hand side. If an element is an
-L<Enum> (or a subclass like L<Pair>), its key is taken as a new hash key,
-and its value as the new hash value for that key. Otherwise the value
-is coerced to L<Str> and used as a hash key, while the next element of the
-list is taken as the corresponding value.
+and then iterates the elements of the right-hand side. If an element is a
+L<Pair>, its key is taken as a new hash key, and its value as the new hash
+value for that key. Otherwise the value is coerced to L<Str> and used as a
+hash key, while the next element of the list is taken as the corresponding
+value.
 
     my %h = 'a', 'b', c => 'd', 'e', 'f';
     # same as
@@ -40,7 +40,7 @@ list is taken as the corresponding value.
     # or
     my %h = <a b c d e f>;
 
-If an L<Enum> is encountered where a value is expected, it is used as a
+If a L<Pair> is encountered where a value is expected, it is used as a
 hash value:
 
     my %h = 'a', 'b' => 'c';
