--- a/Type/Pair.pod
+++ b/Type/Pair.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Key/value pair
 
-    class Pair is Enum { ... }
+    class Pair does Associative { ... }
 
 Consists of two parts, a I<key> and a I<value>. C<Pair>s can be seen as the
 atomic units in C<Hash>es, and they are also used in conjunction with named
@@ -21,8 +21,6 @@ Variants of this are
 
     :key                # same as   key => True
     :!key               # same as   key => False
-
-The immutable version of a C<Pair> is an C<Enum>.
 
 =head1 Methods
 
