--- a/Type/Temporal.pod
+++ b/Type/Temporal.pod
@@ -43,9 +43,9 @@ interrupted).
 
     say sleep-timer 3.14  #=> 0
 
-=head2 sub sleep-till
+=head2 sub sleep-until
 
-    sub sleep-till(Instant $till --> Bool)
+    sub sleep-until(Instant $until --> Bool)
 
 Works just like C<sleep> but checks the current time and goes back to sleep
 if accidentally woken up early, to guarantee waiting until the specified
@@ -55,19 +55,19 @@ sleep until a time in the past.
 
 To sleep until 10 seconds into the future, one could write something like this:
 
-    say sleep-till now+10     #=> True
+    say sleep-until now+10     #=> True
 
 Trying to sleep until a time in the past doesn't work:
 
     my $instant = now - 5;
-    say sleep-till $instant   # => False
+    say sleep-until $instant   # => False
 
 However if we put the instant sufficiently far in the future, the sleep
 should run:
 
     my $instant = now + 30
     # assuming the two commands are run within 30 seconds of one another...
-    say sleep-till $instant   # => True
+    say sleep-until $instant   # => True
 
 To specify an exact instant in the future, first create a C<DateTime> at the
 appropriate point in time, and cast to an C<Instant>.
@@ -78,14 +78,14 @@ appropriate point in time, and cast to an C<Instant>.
         day => 1,
         hour => 22,
         minute => 5);
-    say sleep-till $instant.Instant  # => True (eventually...)
+    say sleep-until $instant.Instant  # => True (eventually...)
 
 This could be be used as a primitive kind of alarm clock.  For instance, say
 you need to get up at 7am on the 4th of September 2015, but for some reason
 your usual alarm clock is broken and you only have your laptop.  You can
 specify the time to get up (being careful about timezones, since
 C<DateTime.new> uses UTC by default) as an C<Instant> and pass this to
-C<sleep-till>, after which you can play an mp3 file to wake you up instead
+C<sleep-until>, after which you can play an mp3 file to wake you up instead
 of your normal alarm clock.  This scenario looks roughly like this:
 
     # DateTime.new uses UTC by default, so get timezone from current time
@@ -98,7 +98,7 @@ of your normal alarm clock.  This scenario looks roughly like this:
         minute => 0,
         timezone => $timezone
     ).Instant;
-    sleep-till $instant;
+    sleep-until $instant;
     qqx{mplayer wake-me-up.mp3};
 
 This code, if necessary, can run as a one-liner so you can e.g. get up in
