Emphasize that plurals only work with .later

--- a/Type/Date.pod
+++ b/Type/Date.pod
@@ -82,7 +82,8 @@ applied. The date delta can be passed as a named argument where the argument
 name is the unit.
 
 Allowed units are C<day>, C<days>, C<week>, C<weeks>, C<month>, C<months>,
-C<year>, C<years>.
+C<year>, C<years>.  Please note that the plural forms can only be used with
+the C<later> method.
 
 Please note that the special ":2nd" named parameter syntax can be a compact
 and self-documenting way of specifying the delta
