--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -295,7 +295,8 @@ name is the unit.
 
 Allowed units are C<second>, C<seconds>, C<minute>, C<minutes>, C<hour>,
 C<hours>, C<day>, C<days>, C<week>, C<weeks>, C<month>, C<months>, C<year>,
-C<years>.
+C<years>.   Please note that the plural forms can only be used with
+the C<later> method.
 
 Please note that the special ":2nd" named parameter syntax can be a compact
 and self-documenting way of specifying the delta
