“Order are preserved” → “Order is preserved”

--- a/Type/Iterable.pod
+++ b/Type/Iterable.pod
@@ -80,7 +80,7 @@ Usage:
 Returns another Iterable that is potentially iterated in parallel, with a
 given batch size and degree of parallelism.
 
-The order of elements are preserved.
+The order of elements is preserved.
 
 =head2 method race
 
