--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -161,7 +161,7 @@ has the same function. C<Nil> is considered as being defined for the type check.
 	sub foo() returns Int { 1 };
 	sub does-not-work(--> Int) { "" }; # throws X::TypeCheck::Return
 
-If the type constrain is a constant expression, it is used as the return value
+If the type constraint is a constant expression, it is used as the return value
 of the routine. Any return statement in that routine has to be argumentless.
 
 	sub foo(--> 123) { return }
@@ -226,7 +226,7 @@ as described below.
 
 =head2 Type Captures
 
-Type Captures allow to defer the specification of a type constrain to the time
+Type Captures allow to defer the specification of a type constraint to the time
 the function is called. They allow to refer to a type both in the signature and
 the function body.
 
