Better and less racey example of Supply.share

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -221,16 +221,16 @@ Creates an on-demand supply from the values passed to this method.
 
     method share(Supply:D:) returns Supply:D
 
-    my $s = Supply.from-list(^100000).share;
-    my @first;
-    $s.tap: { @first.push($_) };
-    my @second;
-    $s.tap: { @second.push($_) };
-    say @first + @second;
-
 Creates a live supply from an on-demand supply, thus making it possible to
 share the values of the on-demand supply on multiple taps, instead of each
-tap seeing all values from the on-demand supply.
+tap seeing its own copy of all values from the on-demand supply.
+
+    # this says in turn: "first 1" "first 2" "second 2" "first 3" "second 3"
+    my $s = Supply.interval(1).share;
+    $s.tap: { "first $_".say };
+    sleep 1.1;
+    $s.tap: { "second $_".say };
+    sleep 2
 
 =head2 method flat
 
